--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -70,11 +70,13 @@
     },
     "deactivate": {
       "heading": "Деактивировать аккаунт",
-      "backButtonLabel": "Перейти на главную",
+      "backButtonLabel": "Перейти в настройки",
       "emailLabel": "Электронная почта",
       "emailDescription": "Электронная почта, которую вы указали при регистрации",
       "passwordLabel": "Пароль",
       "passwordDescription": "Пароль, который вы указали при регистрации",
+      "noPasswordTitle": "Пароль не установлен",
+      "noPasswordMessage": "Чтобы деактивировать учетную запись, сначала установите пароль в настройках учетной записи.",
       "pinLabel": "6-значный код",
       "pinDescription": "Код был отправлен на вашу электронную почту. Если вы включили уведомления в Telegram, код также отправлен туда",
       "submitButton": "Деактивировать",
@@ -308,7 +310,7 @@
         },
         "deactivation": {
           "heading": "Деактивация аккаунта",
-          "description": "После деактивации вашего аккаунта вы не сможете войти в него. Ваш аккаунт будет полностью удален через {deletionDays} дней. До этого вы можете связаться с поддержкой, чтобы восстановить доступ и разблокировать ваш аккаунт.",
+          "description": "Ваша учетная запись будет полностью удалена через {deletionDays} дней. До этого момента вы можете войти в систему и восстановить свой аккаунт. По истечении срока удаления все ваши данные будут удалены навсегда.",
           "confirmModal": {
             "heading": "Подтверждение деактивации",
             "message": "Вы уверены, что хотите деактивировать свой аккаунт? Доступ можно восстановить только в течение {deletionDays} дней."
