--- a/apps/web/public/locales/ru.json
+++ b/apps/web/public/locales/ru.json
@@ -92,6 +92,10 @@
   },
   "layout": {
     "header": {
+      "deactivationAlert": {
+        "message": "Ваш аккаунт запланирован на удаление {relativeDate} ({date}). Вы можете отменить это до указанной даты, чтобы сохранить свои данные.",
+        "messageShort": "Ваш аккаунт будет удалён {relativeDate}."
+      },
       "logo": {
         "platform": "Платформа для стриминга"
       },
@@ -243,7 +247,7 @@
           "securityHeading": "Безопасность",
           "securityDescription": "Настройте двухфакторную аутентификацию и автопродление для повышения защиты ваших данных.",
           "deactivationHeading": "Деактивация",
-          "deactivationDescription": "Если вы хотите временно или навсегда отключить свой аккаунт, используйте эту опцию. Учтите последствия."
+          "deactivationDescription": "Если вы хотите навсегда удалить свой аккаунт, используйте эту опцию. Учтите последствия."
         },
         "email": {
           "heading": "Адрес электронной почты",
@@ -316,6 +320,17 @@
             "message": "Вы уверены, что хотите деактивировать свой аккаунт? Доступ можно восстановить только в течение {deletionDays} дней."
           },
           "button": "Деактивировать"
+        },
+        "reactivation": {
+          "heading": "Деактивация аккаунта",
+          "description": "Ваш аккаунт в настоящее время деактивирован и будет безвозвратно удалён {relativeDate}. Чтобы сохранить аккаунт и данные, вы можете отменить деактивацию прямо сейчас.",
+          "confirmModal": {
+            "heading": "Отменить деактивацию аккаунта?",
+            "message": "Отмена деактивации остановит запланированное удаление и немедленно восстановит ваш аккаунт. Вы уверены, что хотите продолжить?"
+          },
+          "successMessage": "Деактивация аккаунта успешно отменена",
+          "errorMessage": "Ошибка при отмене деактивации аккаунта",
+          "button": "Отменить деактивацию"
         }
       },
       "connections": {
